@@ -1,2 +1,2 @@
 title CloudNet-Wrapper
-java -XX:+UseG1GC -XX:MaxGCPauseMillis=50 -XX:MaxPermSize=256M -XX:CompileThreshold=100 -Xmx128m -jar CloudNet-Wrapper.jar
+java -Dfile.encoding=UTF-8 -Xmx128m -jar CloudNet-Wrapper.jar
